fixed spacing in section 2, deleted commented code

--- a/css/index.css
+++ b/css/index.css
@@ -240,8 +240,15 @@ footer {
 }
 .organize {
   width: 100%;
-  height: 60rem;
   background-color: #EEEEEE;
+}
+.organize h2 {
+  font-size: 3.5rem;
+  font-style: italic;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 .organize img {
   width: 100%;
