--- a/less/landing-page.less
+++ b/less/landing-page.less
@@ -50,8 +50,15 @@
   
 .organize {
   width: 100%;
-  height: 60rem;
   background-color: @light-accent;
+  h2 {
+    font-size: 3.5rem;
+    font-style: italic;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    margin-left: 10%;
+    margin-right: 10%;  
+  }
   img {
     width: 100%;
   }
